<resources>
    <string name="app_name">Semestral Android 1SF142</string>
    <string name="settings_btn_desc">Configuracion</string>
    <string name="take_photo_btn_desc">Tomar Foto</string>
    <string name="gallery_btn_desc">Ver Fotos</string>
    <string name="gallery_back_btn">atras</string>
    <string name="delete_btn">Borrar</string>
    <string name="gallery_tv">Galeria</string>
    <string name="settings_tv">Configuracion</string>
    <string name="nombres_automaticos">Nombres Automaticos</string>
    <string name="intregrantes_grupo_1sf142">Intregrantes Grupo 1SF142</string>
    <string name="integrante_nombre_tv">Nombre</string>
    <string name="integrante_cedula_tv">Cedula</string>

</resources>