<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/settings_header_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#45C9DA">

        <ImageButton
            android:id="@+id/settings_back_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:contentDescription="@string/gallery_back_btn" />

        <TextView
            android:id="@+id/settings_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/settings_back_btn"
            android:text="@string/settings_tv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/settings_header_layout">

        <ImageView
            android:id="@+id/logo_utp_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/logo_utp" />

        <TextView
            android:id="@+id/grupo_1sf142_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/logo_utp_image"
            android:text="@string/intregrantes_grupo_1sf142"
            android:textSize="24sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/grupo_1sf142_tv">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:paddingEnd="0dp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:text="@string/integrante_nombre_tv"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="15dp"
                    android:paddingEnd="0dp"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:text="@string/integrante_cedula_tv"/>

            </LinearLayout>

            <ListView
                android:id="@+id/integrante_listview"
                android:layout_width="match_parent"
                android:layout_height="300dp">

            </ListView>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>