<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:layoutDirection="ltr">

    <TextView
        android:id="@+id/gallery_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:background="#45C9DA"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/gallery_tv" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/gallery_tv"

        >

    </androidx.recyclerview.widget.RecyclerView>

    <RelativeLayout
        android:id="@+id/gallery_btn_layout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageButton
            android:id="@+id/gallery_back_btn"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
            android:scaleType="fitCenter"
            android:contentDescription="@string/gallery_back_btn" />

        <ImageButton
            android:id="@+id/delete_btn"
            android:layout_width="65dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_baseline_delete_24"
            android:scaleType="fitCenter"
            android:contentDescription="@string/delete_btn" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>